--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
     <!-- Password input -->
     <div class="p-field p-mb-3" style="margin-bottom: 20px;">
       <label for="password">Password</label>
-      <input id="password" type="password" pInputText [(ngModel)]="authRequest.password_hash" placeholder="Password" style="width: 100%;" />
+      <input id="password" type="password" pInputText [(ngModel)]="authRequest.passwordHash" placeholder="Password" style="width: 100%;" />
     </div>
 
     <!-- Sign in button -->
