--- a/frontend/src/app/functionalities/company-creation/add-admin/add-admin.component.html
+++ b/frontend/src/app/functionalities/company-creation/add-admin/add-admin.component.html
@@ -10,6 +10,9 @@
     <label for="email">Email:</label>
     <input type="email" id="email" [(ngModel)]="adminData.email" name="email" required />
 
-    <button type="submit">Submit Admin</button>
+    <label for="email">Password:</label>
+    <input type="password" id="password" [(ngModel)]="adminData.passwordHash" name="email" required />
+
+  <button type="submit">Submit Admin</button>
     <button type="button" (click)="closeFormHandler()">Close</button>
 </form>
