--- a/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.html
@@ -23,8 +23,7 @@
       <tr *ngFor="let company of companies">
         <td>{{ company.name }}</td>
         <td>{{ company.address }}</td>
-        <td>{{ company.phoneNumber }}</td>
-        <td>{{ company.email }}</td>
+        <td>{{ company.telefonNumber }}</td>
       </tr>
       </tbody>
     </table>
