--- a/frontend/src/app/functionalities/employee-management/employee-edit-dialog/employee-edit-dialog.component.html
+++ b/frontend/src/app/functionalities/employee-management/employee-edit-dialog/employee-edit-dialog.component.html
@@ -2,40 +2,43 @@
   <div class="modal">
     <button (click)="onClose()" class="close-btn">×</button>
 
-    <div class="overlay" *ngIf="isDialogOpen">
-      <div class="modal">
-        <button (click)="onClose()" class="close-btn">×</button>
+    <h1 class="dialog-title">{{ isNewEmployee ? 'Register Employee' : 'Edit Employee' }}</h1>
 
-        <h1 class="dialog-title">Edit Information</h1>
+    <div mat-dialog-content>
+      <div class="form-group">
+        <label for="firstName">First Name:</label>
+        <input matInput [(ngModel)]="data.firstName" id="firstName" required>
+      </div>
 
-        <div mat-dialog-content>
+      <div class="form-group">
+        <label for="lastName">Last Name:</label>
+        <input matInput [(ngModel)]="data.lastName" id="lastName" required>
+      </div>
 
-          <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input matInput [(ngModel)]="data.firstName" id="firstName" required>
-          </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input matInput [(ngModel)]="data.email" id="email" type="email" required>
+      </div>
 
-          <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input matInput [(ngModel)]="data.lastName" id="lastName" required>
-          </div>
+      <div class="form-group">
+        <label for="telefon">Phone Number:</label>
+        <input matInput [(ngModel)]="data.telefonNumber" id="telefon" required>
+      </div>
 
-          <div class="form-group">
-            <label for="telefon">Telefon:</label>
-            <input matInput [(ngModel)]="data.telefon" id="telefon" required>
-          </div>
+      <!-- Show password field only if it's a new employee registration -->
+      <div class="form-group" *ngIf="isNewEmployee">
+        <label for="password">Password:</label>
+        <input matInput [(ngModel)]="data.passwordHash" id="password" type="password" required>
+      </div>
 
-          <div class="form-group">
-            <mat-checkbox [(ngModel)]="data.accountLocked">Account Locked</mat-checkbox>
-          </div>
-        </div>
-
-        <div mat-dialog-actions class="dialog-actions">
-          <button class="cancel-btn" (click)="onClose()">Cancel</button>
-          <button mat-button color="primary" (click)="onSave()">Save Changes</button>
-        </div>
+      <div class="form-group">
+        <mat-checkbox [(ngModel)]="data.accountLocked" *ngIf="!isNewEmployee">Account Locked</mat-checkbox>
       </div>
     </div>
 
+    <div mat-dialog-actions class="dialog-actions">
+      <button class="cancel-btn" (click)="onClose()">Cancel</button>
+      <button mat-button color="primary" (click)="onSave()">Save Changes</button>
+    </div>
   </div>
 </div>
