--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,6 +2,7 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "primeicons/primeicons.css";
 
 .login-page {
   display: flex;
@@ -20,3 +21,9 @@
 .text-center {
   text-align: center;
 }
+
+.custom-backdrop {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+
