add company name to card avatar

--- a/frontend/src/app/functionalities/employee-management/employee-manager/employee-manager.component.html
+++ b/frontend/src/app/functionalities/employee-management/employee-manager/employee-manager.component.html
@@ -14,7 +14,7 @@
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-<div *ngIf="showTable" style="margin-left: 600px;">
+<div *ngIf="showTable">
   <h3>Employees registered:</h3>
 </div>
 
@@ -24,9 +24,9 @@
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Email</th>
+      <th style="width:35%">Email</th>
       <th>Account Locked</th>
-      <th>Phone</th>
+      <th style="width:35%">Phone</th>
       <th></th>
     </tr>
     </thead>
