--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,19 +1,21 @@
-<div *ngIf="userDetails">
+<div *ngIf="userDetails" style="display: flex; flex-direction: column; min-height: 100vh;">
   <div class="top-bar">
     <div class="user-profile">
-      <!-- Avatar with PrimeNG icon and customized style -->
       <p-avatar
         icon="pi pi-user"
         [style]="{'width': '40px', 'height': '40px', 'background-color': '#007bff', 'color': '#fff', 'border-radius': '50%', 'cursor': 'pointer'}"
         (click)="userMenu.toggle($event)">
       </p-avatar>
 
-      <!-- User Menu Overlay Panel -->
       <p-overlayPanel #userMenu [dismissable]="true">
         <div class="user-details">
           <strong>{{ userDetails.firstName }} {{ userDetails.lastName }}</strong>
+          <hr />
           <p>{{ userDetails.email }}</p>
-          <span *ngIf="userDetails.role">Role: {{ userDetails.role }}</span>
+          <p *ngIf="userDetails.role">Role: {{ userDetails.role }}</p>
+          <p *ngIf="userDetails.role === UserRole.Administrator || userDetails.role === UserRole.Employee">
+            Company: {{ userDetails.companyName }}
+          </p>
         </div>
         <hr />
         <button pButton label="Contul meu" (click)="goToProfile()" class="p-button-text"></button>
@@ -22,8 +24,9 @@
     </div>
   </div>
 
-  <!-- Role-based Dashboards -->
-  <app-superadmin-dashboard *ngIf="userDetails.role === 'Superadmin'"></app-superadmin-dashboard>
-  <app-administrator-dashboard *ngIf="userDetails.role === 'Administrator'"></app-administrator-dashboard>
-  <app-employee-dashboard *ngIf="userDetails.role === 'Employee'"></app-employee-dashboard>
+  <div style="flex-grow: 1; display: flex; justify-content: center; align-items: center;">
+    <app-superadmin-dashboard *ngIf="userDetails.role === 'Superadmin'"></app-superadmin-dashboard>
+    <app-administrator-dashboard *ngIf="userDetails.role === 'Administrator'"></app-administrator-dashboard>
+    <app-employee-dashboard *ngIf="userDetails.role === 'Employee'"></app-employee-dashboard>
+  </div>
 </div>
