--- a/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.html
@@ -11,21 +11,43 @@
   <div *ngIf="companies && companies.length > 0; else noCompanies">
     <h3>Companies List:</h3>
     <table class="companies-table">
-      <thead>
-      <tr>
-        <th>Company Name</th>
-        <th>Address</th>
-        <th>Phone Number</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let company of companies">
-        <td>{{ company.name }}</td>
-        <td>{{ company.address }}</td>
-        <td>{{ company.telefonNumber }}</td>
-      </tr>
-      </tbody>
-    </table>
+          <thead>
+          <tr>
+            <th>Company Name</th>
+            <th>Address</th>
+            <th>Phone Number</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let company of companies">
+            <td>{{ company.name }}</td>
+            <td>{{ company.address }}</td>
+            <td>{{ company.telefonNumber }}</td>
+          </tr>
+          </tbody>
+        </table>
+
+<!--    <p-table-->
+<!--      [value]="companies"-->
+<!--      selectionMode="single"-->
+<!--      dataKey="name"-->
+<!--      [tableStyle]="{'min-width': '50rem'}">-->
+<!--      <ng-template pTemplate="header">-->
+<!--        <tr>-->
+<!--          <th pSortableColumn="name">Company Name <p-sortIcon field="name"></p-sortIcon></th>-->
+<!--          <th pSortableColumn="address">Address <p-sortIcon field="address"></p-sortIcon></th>-->
+<!--          <th pSortableColumn="telefonNumber">Phone Number <p-sortIcon field="telefonNumber"></p-sortIcon></th>-->
+<!--        </tr>-->
+<!--      </ng-template>-->
+<!--      <ng-template pTemplate="body" let-company>-->
+<!--        <tr [pSelectableRow]="company">-->
+<!--          <td>{{ company.name }}</td>-->
+<!--          <td>{{ company.address }}</td>-->
+<!--          <td>{{ company.telefonNumber }}</td>-->
+<!--        </tr>-->
+<!--      </ng-template>-->
+<!--    </p-table>-->
+
   </div>
 
   <!-- Mesajul de "No companies found" apare doar dacă butonul a fost apăsat și lista de companii este goală -->
@@ -59,3 +81,10 @@
     <button *ngIf="isCompanyCreated && !isAddCompanyFormVisible" (click)="openAddCompanyForm()">Add Another Company</button>
   </div>
 </div>
+
+
+
+
+
+
+
