--- a/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/superadmin-dashboard/superadmin-dashboard.component.scss
@@ -410,4 +410,15 @@ button {
 }
 
 
+.buttons-container {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+
 
